--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -1448,6 +1448,7 @@
     <Compile Include="GamePanels\CheckBox.cs" />
     <Compile Include="GamePanels\LinkButton.cs" />
     <Compile Include="GamePanels\NumericSetTexture.cs" />
+    <Compile Include="GamePanels\Scrollbar\Frame.cs" />
     <Compile Include="GamePanels\TextBox.cs" />
     <Compile Include="GamePlugins\AirViewPlugin\AirView.cs" />
     <Compile Include="GamePlugins\AirViewPlugin\AirViewPlugin.cs" />
