完善文字内容

--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -1449,6 +1449,7 @@
     <Compile Include="GamePanels\LinkButton.cs" />
     <Compile Include="GamePanels\NumericSetTexture.cs" />
     <Compile Include="GamePanels\Scrollbar\Frame.cs" />
+    <Compile Include="GamePanels\Scrollbar\TextContent.cs" />
     <Compile Include="GamePanels\TextBox.cs" />
     <Compile Include="GamePlugins\AirViewPlugin\AirView.cs" />
     <Compile Include="GamePlugins\AirViewPlugin\AirViewPlugin.cs" />
